--- a/decision1.html
+++ b/decision1.html
@@ -1,13 +1,16 @@
 
-<p class="center">01</p>
+<p class="center"></p>
 <div id="parent" class="center">
-    <p id="a0" class="center">哪种类型数据</p>
+    <!-- <p id="a0" class="center">哪种类型数据</p>
     <button id="a1" href="javascript:void(0);">连续型</button>
     <button id="a2" href="javascript:void(0);">离散型</button>
     <p>Situation:</span><span id="situation"></p>
     <p class="center">需要使用的是：</p>
-    <p id="decision"></p>
+    <p id="decision"></p> -->
+
+    <h2>Don't worry, you'll be able to use this feature soon!</h2>
+    <h2>Hahaha</h2>
 
 
 </div>
-<script type="text/javascript" src="js/select1.js"></script>
+<!-- <script type="text/javascript" src="js/select1.js"></script> -->
