--- a/decision2.html
+++ b/decision2.html
@@ -1,5 +1,5 @@
 
-<p class="center">02 A/B 多重设计比较</p>
+<h3 class="">Multiple Design Comparison</h3>
 <div id="parent" class="center">
     <p id="a0" class="center">比较方法？</p>
     <button id="a1" href="javascript:void(0);">组间比较</button>
