--- a/decision3.html
+++ b/decision3.html
@@ -1,5 +1,5 @@
 
-<p class="center">03 Benchmarking</p>
+<h3 class="">03 Benchmarking</h3>
 <div id="parent" class="center">
     <p id="a0" class="center">哪种类型数据</p>
     <button id="a1" href="javascript:void(0);">连续型</button>
