--- a/decision4.html
+++ b/decision4.html
@@ -1,5 +1,5 @@
 
-<h3 class="">04 Overall Estimation</h3>
+<h3 class="">Overall Estimation</h3>
 <div id="parent" class="center">
     <p id="a0" class="center">哪种类型数据</p>
     <button id="a1" href="javascript:void(0);">连续型</button>
