--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <nav id="navbar" class="navbar navbar-expand-sm bg-dark navbar-dark">
         <!-- <a class="navbar-brand" href="#">QX</a> -->
         <div class="container text_white">
             <h4>QX</h4>
+            
+            <p>About</p>
         </div>
-
-
-
     </nav>
 
     <div class="container">
@@ -109,7 +108,7 @@
 
 
             <!-- //Ajax 方法载入-->
-            <div id="div1" class="col-sm-12 blue">
+            <div id="div1" class="blue">
                 <h2></h2>
 
             </div>
