--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- <a class="navbar-brand" href="#">QX</a> -->
         <div class="container text_white">
             <h4>QX</h4>
-            
+
             <p>About</p>
         </div>
     </nav>
@@ -33,39 +33,39 @@
         <div id="main_content" class="col-sm-12">
             <div id="direct_selector" class="">
                 <!-- 方法直接选择器 -->
-                <h2>Direct Selector (Do not touch this)</h2>
+                <h2 class="center">Direct Selector (Do not touch this)</h2>
 
                 <!-- <div class="col-sm-12 dark"> -->
                 <div class="row">
-                    <button class="yellow col" id="q01" href="javascript:void(0);">q01</button>
-                    <button class="pink col" id="q02" href="javascript:void(0);">q02</button>
-                    <button class="col blue" id="q03" href="javascript:void(0);">q03</button>
-                    <button class="col orange" id="q04" href="javascript:void(0);">q04</button>
-                    <button class="col yellow" id="q05" href="javascript:void(0);">q05</button>
-                    <button class="col pink" id="q06" href="javascript:void(0);">q06</button>
-                    <button class="col blue" id="q07" href="javascript:void(0);">q07</button>
-                    <button class="col orange" id="q08" href="javascript:void(0);">q08</button>
-                    <button class="col yellow" id="q09" href="javascript:void(0);">q09</button>
-                    <button class="col pink" id="q10" href="javascript:void(0);">q10</button>
+                    <button class="yellow col" id="q01" href="javascript:void(0);">q01 OE</button>
+                    <button class="yellow col" id="q02" href="javascript:void(0);">q02 OE</button>
+                    <button class="col yellow" id="q03" href="javascript:void(0);">q03 OE</button>
+                    <button class="col yellow" id="q04" href="javascript:void(0);">q04 OE</button>
+                    <button class="col pink" id="q05" href="javascript:void(0);">q05 BM</button>
+                    <button class="col pink" id="q06" href="javascript:void(0);">q06 BM</button>
+                    <button class="col pink" id="q07" href="javascript:void(0);">q07 BM</button>
+                    <button class="col pink" id="q08" href="javascript:void(0);">q08 BM</button>
+                    <button class="col blue" id="q09" href="javascript:void(0);">q09 AB</button>
+                    <button class="col blue" id="q10" href="javascript:void(0);">q10 AB</button>
                 </div>
                 <div class="row">
-                    <button class="col blue" id="q11" href="javascript:void(0);">q11</button>
-                    <button class="col orange" id="q12" href="javascript:void(0);">q12</button>
-                    <button class="col yellow" id="q13" href="javascript:void(0);">q13</button>
-                    <button class="col pink" id="q14" href="javascript:void(0);">q14</button>
-                    <button class="col blue" id="q15" href="javascript:void(0);">q15</button>
-                    <button class="col orange" id="q16" href="javascript:void(0);">q16</button>
-                    <button class="col yellow" id="q17" href="javascript:void(0);">q17</button>
-                    <button class="col pink" id="q18" href="javascript:void(0);">q18</button>
-                    <button class="col blue" id="q19" href="javascript:void(0);">q19</button>
-                    <button class="col orange" id="q20" href="javascript:void(0);">q20</button>
+                    <button class="col blue" id="q11" href="javascript:void(0);">q11 AB</button>
+                    <button class="col blue" id="q12" href="javascript:void(0);">q12 AB</button>
+                    <button class="col dark" id="q13" href="javascript:void(0);">q13</button>
+                    <button class="col dark" id="q14" href="javascript:void(0);">q14</button>
+                    <button class="col dark" id="q15" href="javascript:void(0);">q15</button>
+                    <button class="col dark" id="q16" href="javascript:void(0);">q16</button>
+                    <button class="col dark" id="q17" href="javascript:void(0);">q17</button>
+                    <button class="col dark" id="q18" href="javascript:void(0);">q18</button>
+                    <button class="col dark" id="q19" href="javascript:void(0);">q19</button>
+                    <button class="col blue" id="q20" href="javascript:void(0);">q20 AB</button>
                 </div>
             </div>
             <!-- </div> -->
 
 
             <!-- 4 个功能 -->
-            <div id="func" class="white">
+            <div id="func" class="center">
                 <h2>Select your research purpose</h2>
 
                 <div class="row">
@@ -125,6 +125,10 @@
 
 
     </div><!-- container close -->
+
+
+    <button id="feedback">Feedback</button>
+
 
 </body>
 
