--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
 
 
     <button id="feedback">Feedback</button>
+    <textarea cols="20" rows="5" name="textarea" id="text-feedback"></textarea>
+    
 
 
 </body>
