--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>QX | Statistical Quantitative Analysis Tool</title>
+    <title>Statiqx | Statistical Quantitative Analysis Tool</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src="js/jquery.min.js"></script>
@@ -17,10 +17,10 @@
 
 <body>
 
-    <nav id="navbar" class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <nav id="navbar" class="navbar navbar-expand-sm bg-dark">
         <!-- <a class="navbar-brand" href="#">QX</a> -->
         <div class="container text_white">
-            <h4>QX</h4>
+            <h4>Statiqx</h4>
 
             <p>About</p>
         </div>
@@ -126,6 +126,16 @@
 
     </div><!-- container close -->
 
+
+    <nav id="navbar_bottom" class="navbar navbar-expand-sm bg-dark navbar-light">
+        <!-- <a class="navbar-brand" href="#">QX</a> -->
+        <div class="container text_white">
+            <h4>1</h4>
+
+            <p>2</p>
+            <p>3</p>
+        </div>
+    </nav>
 
     <button id="feedback">Feedback</button>
     <textarea cols="20" rows="5" name="textarea" id="text-feedback"></textarea>
