--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <nav id="navbar" class="navbar navbar-expand-sm bg-dark">
         <!-- <a class="navbar-brand" href="#">QX</a> -->
         <div class="container text_white">
-            <h4>Statiqx</h4>
+            <h4 id="logo">Statiqx</h4>
 
-            <p>About</p>
+            <p id="about">About</p>
         </div>
     </nav>
 
@@ -31,97 +31,10 @@
 
 
         <div id="main_content" class="col-sm-12">
-            <div id="direct_selector" class="">
-                <!-- 方法直接选择器 -->
-                <h2 class="center">Direct Selector (Do not touch this)</h2>
-
-                <!-- <div class="col-sm-12 dark"> -->
-                <div class="row">
-                    <button class="yellow col" id="q01" href="javascript:void(0);">q01 OE</button>
-                    <button class="yellow col" id="q02" href="javascript:void(0);">q02 OE</button>
-                    <button class="col yellow" id="q03" href="javascript:void(0);">q03 OE</button>
-                    <button class="col yellow" id="q04" href="javascript:void(0);">q04 OE</button>
-                    <button class="col pink" id="q05" href="javascript:void(0);">q05 BM</button>
-                    <button class="col pink" id="q06" href="javascript:void(0);">q06 BM</button>
-                    <button class="col pink" id="q07" href="javascript:void(0);">q07 BM</button>
-                    <button class="col pink" id="q08" href="javascript:void(0);">q08 BM</button>
-                    <button class="col blue" id="q09" href="javascript:void(0);">q09 AB</button>
-                    <button class="col blue" id="q10" href="javascript:void(0);">q10 AB</button>
-                </div>
-                <div class="row">
-                    <button class="col blue" id="q11" href="javascript:void(0);">q11 AB</button>
-                    <button class="col blue" id="q12" href="javascript:void(0);">q12 AB</button>
-                    <button class="col dark" id="q13" href="javascript:void(0);">q13</button>
-                    <button class="col dark" id="q14" href="javascript:void(0);">q14</button>
-                    <button class="col dark" id="q15" href="javascript:void(0);">q15</button>
-                    <button class="col dark" id="q16" href="javascript:void(0);">q16</button>
-                    <button class="col dark" id="q17" href="javascript:void(0);">q17</button>
-                    <button class="col dark" id="q18" href="javascript:void(0);">q18</button>
-                    <button class="col dark" id="q19" href="javascript:void(0);">q19</button>
-                    <button class="col blue" id="q20" href="javascript:void(0);">q20 AB</button>
-                </div>
-            </div>
-            <!-- </div> -->
-
-
-            <!-- 4 个功能 -->
-            <div id="func" class="center">
-                <h2>Select your research purpose</h2>
-
-                <div class="row">
-                    <button id="F02" href="javascript:void(0);" class="func col yellow">
-                        <h3>A/B comparison</h3>
-                        <p></p>
-                    </button>
-                    <button id="F03" href="javascript:void(0);" class="func col orange">
-                        <h3>Benchmark evaluation</h3>
-                        <p></p>
-                    </button>
-                    <button id="F04" href="javascript:void(0);" class="func col pink">
-                        <h3>Overall estimation</h3>
-                        <p></p>
-
-                    </button>
-
-                    <button id="F01" href="javascript:void(0);" class="func col yellow">
-                        <h3>Sample Size Calculator</h3>
-                        <p>Temporarily unavailable :(</p>
-
-                    </button>
-                </div>
-            </div>
-
-            <!-- //decision maker -->
-            <!--<div class="col-sm-4 dark">
-                <p class="center">1.1 Decision Maker</p>
-                <div id="parent" class="center">
-                    <p id="a0" class="center">哪种类型数据</p>
-                    <button id="a1" href="javascript:void(0);">连续型</button>
-                    <button id="a2" href="javascript:void(0);">离散型</button>
-                    <p>Situation:</span><span id="situation"></p>
-                    <p class="center">需要使用的是：</p>
-                    <p id="decision"></p>
-                </div>
-                <script type="text/javascript" src="js/select.js"></script>
-            </div>
- -->
-
-
-            <!-- //Ajax 方法载入-->
-            <div id="div1" class="blue">
-                <h2></h2>
-
-            </div>
-
-
-
 
 
 
         </div><!-- main_content close -->
-
-
-        <!-- </div> -->
 
 
     </div><!-- container close -->
@@ -130,10 +43,10 @@
     <nav id="navbar_bottom" class="navbar navbar-expand-sm bg-dark navbar-light">
         <!-- <a class="navbar-brand" href="#">QX</a> -->
         <div class="container text_white">
-            <h4>1</h4>
+            <h4 id="home">Home</h4>
 
-            <p>2</p>
-            <p>3</p>
+            <h4 id="bottom2">Direct Selector</h4>
+            <!-- <h4>3</h4> -->
         </div>
     </nav>
 
