--- a/direct_selector.html
+++ b/direct_selector.html
@@ -83,7 +83,7 @@
 
 <div id="direct_selector" class="">
     <!-- 方法直接选择器 -->
-    <h2 class="center">Direct Selector (Do not touch this)</h2>
+    <h2 class="center">Direct Selector</h2>
 
     <!-- <div class="col-sm-12 dark"> -->
     <div class="row">
