--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container text_white">
             <h4 id="logo">Statiqx</h4>
 
-            <p id="about">About</p>
+            <p id="about" class="cursor_pointer">About</p>
         </div>
     </nav>
 
@@ -43,9 +43,9 @@
     <nav id="navbar_bottom" class="navbar navbar-expand-sm bg-dark navbar-light">
         <!-- <a class="navbar-brand" href="#">QX</a> -->
         <div class="container text_white">
-            <h4 id="home">Home</h4>
+            <h4 id="home" class="cursor_pointer">Home</h4>
 
-            <h4 id="bottom2">Direct Selector</h4>
+            <h4 id="bottom2" class="cursor_pointer">Direct Selector</h4>
             <!-- <h4>3</h4> -->
         </div>
     </nav>
