--- a/main_func.html
+++ b/main_func.html
@@ -1,4 +1,4 @@
-<h2>Select your research purpose</h2>
+<h2>Select your research purpose !</h2>
 
 <div class="row">
     <button id="F02" href="javascript:void(0);" class="func col yellow">
@@ -9,13 +9,16 @@
         <h3>Benchmark evaluation</h3>
         <p></p>
     </button>
+</div>
+
+<div class="row">
     <button id="F04" href="javascript:void(0);" class="func col pink">
         <h3>Overall estimation</h3>
         <p></p>
 
     </button>
 
-    <button id="F01" href="javascript:void(0);" class="func col yellow">
+    <button id="F01" href="javascript:void(0);" class="func col blue">
         <h3>Sample Size Calculator</h3>
         <p>Temporarily unavailable :(</p>
 
