--- a/main_functions.html
+++ b/main_functions.html
@@ -19,7 +19,7 @@
 
 <!-- 4 个功能 -->
 <div id="func" class="center">
-    <h2>Select your research purpose</h2>
+    <h2>Select your research purpose !</h2>
 
     <div class="row">
         <button id="F02" href="javascript:void(0);" class="func col yellow">
@@ -30,6 +30,8 @@
             <h3>Benchmark evaluation</h3>
             <p></p>
         </button>
+    </div>
+    <div class="row">
         <button id="F04" href="javascript:void(0);" class="func col pink">
             <h3>Overall estimation</h3>
             <p></p>
