--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav id="navbar" class="navbar navbar-expand-sm bg-dark">
         <!-- <a class="navbar-brand" href="#">QX</a> -->
         <div class="container text_white">
-            <h4 id="logo">Statiqx</h4>
+            <h4 id="logo" class="cursor_pointer">Statiqx</h4>
 
             <p id="about" class="cursor_pointer">About</p>
         </div>
