--- a/about.html
+++ b/about.html
@@ -1,5 +1,7 @@
 <h3>Thank you for try Statiqx!</h3>
 
-update by github desktop
+
 
 <p>Contact: zqh070333@foxmail.com</p>
+
+<p>Copyright © 2021 Qinghua Zeng. All rights reserved.</p>
