wald 增加 置信区间输入框

--- a/statistics/01.html
+++ b/statistics/01.html
@@ -17,6 +17,11 @@
     <textarea cols="10" rows="1" name="textareaWald" id="totalNum"></textarea>
 </div>
 
+<div>
+    置信区间
+    <textarea cols="10" rows="1" name="textareaWald" id="q01z"></textarea>%
+</div>
+
 
 <input type="button" value="caluclate" id="Caluclate_AdjustedWaldConfidenceInterval">
 <div>valueP:<input type="text" id="valueP" /></div>
