--- a/statistics/02.html
+++ b/statistics/02.html
@@ -10,7 +10,7 @@
 <h2>02 t置信区间</h2>
 连续型数据:<textarea cols="20" rows="2" name="textarea" id="textarea"></textarea>
 
-<div>置信区间:<input type="text" id="num2">%</div>
+<div>置信区间:<input type="text" id="Q02confi">%</div>
 
 <div><input type="button" value=" evaluate " id="Caluclate_tConfidence">
     <div>Sum:<input type="text" id="sum" /></div>
