--- a/statistics/03.html
+++ b/statistics/03.html
@@ -14,7 +14,17 @@
     <textarea cols="20" rows="4" name="textareaWald" id="textareaTlog"></textarea>
 </div>
 
+<div>
+    置信区间
+    <textarea cols="20" rows="4" name="textareaWald" id="q03confi"></textarea>%
+</div>
+
+
+<!-- 按钮 -->
 <input type="button" value="caluclate" id="Caluclate_tLogConfidenceInterval">
+
+
+<!-- 结果 -->
 <div>SampleSize:<input type="text" id="TlogSampleSize" />
     <textarea cols="20" rows="4" name="tlog" id="Tlogs"></textarea>
 </div>
