--- a/statistics/04.html
+++ b/statistics/04.html
@@ -15,10 +15,20 @@
                     <textarea cols="40" rows="5" name="textareaWald" id="ConfidenceIntervalAroundMedian1"></textarea>
                 </div>
 
+                <div>
+                    置信区间
+                    <textarea cols="40" rows="5" name="textareaWald" id="q04confi"></textarea>
+                </div>
+
                 <input type="button" value="caluclate" id="Caluclate_ConfidenceIntervalAroundMedian">
+
+
                 <div>median:<input type="text" id="ConfidenceIntervalAroundMedian2" /></div>
                 <div>np:<input type="text" id="np" /></div>
                 <div>95%正态分布临界值:<input type="text" id="q04z95" /></div>
                 <div>标准误:<input type="text" id="q04stdError" /></div>
                 <div>q04Min:<input type="text" id="q04Min" /></div>
                 <div>q04Max:<input type="text" id="q04Max" /></div>
+
+                <div>data1:<input type="text" id="q04data1" /></div>
+                <div>data2:<input type="text" id="q04data2" /></div>
