代码结构优化，引入paperjs

--- a/main_html/main_functions.html
+++ b/main_html/main_functions.html
@@ -1,19 +1,19 @@
 <script>
     //========主功能选择器=================================
     $("#F01").click(function () {
-        $("#main_content").load("decision1.html");
+        $("#main_content").load("decision_html/decision1.html");
     });
 
     $("#F02").click(function () {
-        $("#main_content").load("decision2.html");
+        $("#main_content").load("decision_html/decision2.html");
     });
 
     $("#F03").click(function () {
-        $("#main_content").load("decision3.html");
+        $("#main_content").load("decision_html/decision3.html");
     });
 
     $("#F04").click(function () {
-        $("#main_content").load("decision4.html");
+        $("#main_content").load("decision_html/decision4.html");
     });
 </script>
 
