--- a/statistics/01.html
+++ b/statistics/01.html
@@ -3,7 +3,7 @@
 </div>
 
 <script>
-    $("#div3").load("head_Math_js.html");
+    $("#div3").load("main_html/head_Math_js.html");
 </script>
 
 <h2>01 Wald</h2>
