--- a/statistics/02.html
+++ b/statistics/02.html
@@ -4,7 +4,7 @@
 </div>
 
 <script>
-    $("#div3").load("head_Math_js.html");
+    $("#div3").load("main_html/head_Math_js.html");
 </script>
 
 <h2>02 t置信区间</h2>
