--- a/statistics/07.html
+++ b/statistics/07.html
@@ -5,7 +5,7 @@
 </div>
 
 <script>
-    $("#div3").load("head_Math_js.html");
+    $("#div3").load("main_html/head_Math_js.html");
 </script>
 
 <h2>07 OneSampleT</h2>
@@ -20,7 +20,7 @@
 </div>
 
 <div>
-    q07s
+    q07s（标准差）
     <textarea cols="10" rows="1" name="textareaWald" id="q07s"></textarea>
 </div>
 
