--- a/statistics/15.html
+++ b/statistics/15.html
@@ -5,7 +5,7 @@
 </div>
 
 <script>
-    $("#div3").load("head_Math_js.html");
+    $("#div3").load("main_html/head_Math_js.html");
 </script>
 
 <h2>15 检验力(6.3 比较数值)</h2>
