--- a/statistics/17.html
+++ b/statistics/17.html
@@ -5,7 +5,7 @@
 </div>
 
 <script>
-    $("#div3").load("head_Math_js.html");
+    $("#div3").load("main_html/head_Math_js.html");
 </script>
 
 <h2>17 与基准比较的样本量 6.5.3</h2>
