--- a/statistics/18.html
+++ b/statistics/18.html
@@ -5,7 +5,7 @@
 </div>
 
 <script>
-    $("#div3").load("head_Math_js.html");
+    $("#div3").load("main_html/head_Math_js.html");
 </script>
 
 <h2>18 卡方检验的样本量预估 6.6</h2>
