--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
 
+    <script type="text/javascript" src="js/paper-full.js"></script>
+    <script type="text/javascript" src="js/initialization.js" canvas="myCanvas"></script>
 </head>
 
 
@@ -53,7 +55,7 @@
     <button id="feedback">Feedback</button>
     <textarea cols="20" rows="5" name="textarea" id="text-feedback"></textarea>
     
-
+    <canvas id="myCanvas" width=800 height="500"></canvas>
 
 </body>
 
