--- a/statistics/09.html
+++ b/statistics/09.html
@@ -5,7 +5,7 @@
 </div>
 
 <script>
-    $("#div3").load("head_Math_js.html");
+    $("#div3").load("main_html/head_Math_js.html");
 </script>
 
 <h2>09 PairedT</h2>
