--- a/statistics/13.html
+++ b/statistics/13.html
@@ -5,7 +5,7 @@
 </div>
 
 <script>
-    $("#div3").load("head_Math_js.html");
+    $("#div3").load("main_html/head_Math_js.html");
 </script>
 
 <h2>13 预估数值（6.2）</h2>
