--- a/statistics/14.html
+++ b/statistics/14.html
@@ -5,7 +5,7 @@
 </div>
 
 <script>
-    $("#div3").load("head_Math_js.html");
+    $("#div3").load("main_html/head_Math_js.html");
 </script>
 
 <h2>14 大样本的二项样本量估计（6.5.1）</h2>
