--- a/statistics/19.html
+++ b/statistics/19.html
@@ -5,7 +5,7 @@
 </div>
 
 <script>
-    $("#div3").load("head_Math_js.html");
+    $("#div3").load("main_html/head_Math_js.html");
 </script>
 
 <h2>19 配对比例 6.7</h2>
