代码结构优化

--- a/decision_html/decision2.html
+++ b/decision_html/decision2.html
@@ -10,4 +10,4 @@
 
 
 </div>
-<script type="text/javascript" src="js/select2.js"></script>
+<script type="text/javascript" src="js/ui/select2.js"></script>
