--- a/decision_html/decision3.html
+++ b/decision_html/decision3.html
@@ -10,4 +10,4 @@
 
 
 </div>
-<script type="text/javascript" src="js/select3.js"></script>
+<script type="text/javascript" src="js/ui/select3.js"></script>
