--- a/main_html/head_Math_js.html
+++ b/main_html/head_Math_js.html
@@ -1,12 +1,12 @@
-<script type="text/javascript" src="js/getT2.js"></script>
-<script type="text/javascript" src="js/simple-statistics.js"></script>
-<script type="text/javascript" src="js/simpleCal.js"></script>
-<script type="text/javascript" src="js/calculating.js"></script>
-<script type="text/javascript" src="js/numsToStat.js"></script>
-<script type="text/javascript" src="js/split.js"></script>
-<script type="text/javascript" src="js/statistic.js"></script>
+<script type="text/javascript" src="js/math/getT2.js"></script>
+<script type="text/javascript" src="js/math/simple-statistics.js"></script>
+<script type="text/javascript" src="js/math/simpleCal.js"></script>
+<script type="text/javascript" src="js/math/calculating.js"></script>
+<script type="text/javascript" src="js/math/numsToStat.js"></script>
 
-<script type="text/javascript" src="js/wald.js"></script>
-<script type="text/javascript" src="js/Caluclate_OneSampleBinomial.js"></script>
-<script type="text/javascript" src="js/OneSampleZTest.js"></script>
-<script type="text/javascript" src="js/tConfidenceInterval.js"></script>
+<script type="text/javascript" src="js/math/statistic.js"></script>
+
+<script type="text/javascript" src="js/math/wald.js"></script>
+<script type="text/javascript" src="js/math/Caluclate_OneSampleBinomial.js"></script>
+<script type="text/javascript" src="js/math/OneSampleZTest.js"></script>
+<script type="text/javascript" src="js/math/tConfidenceInterval.js"></script>
