--- a/decision_html/decision4.html
+++ b/decision_html/decision4.html
@@ -10,4 +10,4 @@
 
 
 </div>
-<script type="text/javascript" src="js/select4.js"></script>
+<script type="text/javascript" src="js/ui/select4.js"></script>
