--- a/decision_html/decision2.html
+++ b/decision_html/decision2.html
@@ -2,11 +2,11 @@
 <h3 class="">Multiple Design Comparison</h3>
 <div id="parent" class="center">
     <p id="a0" class="center">比较方法？</p>
-    <button id="a1" href="javascript:void(0);">组间比较</button>
-    <button id="a2" href="javascript:void(0);">非组间</button>
-    <p>Situation:</span><span id="situation"></p>
-    <p class="center">需要使用的是：</p>
-    <p id="decision"></p>
+    <button id="a1" href="javascript:void(0);"class="decisionButton">组间比较 Comparisons between groups</button>
+    <button id="a2" href="javascript:void(0);"class="decisionButton">组内比较 Comparison within group</button>
+    <!-- <p>Situation:</span><span id="situation"></p> -->
+    <!-- <p class="center">需要使用的是：</p>
+    <p id="decision"></p> -->
 
 
 </div>
