--- a/decision_html/decision4.html
+++ b/decision_html/decision4.html
@@ -1,12 +1,11 @@
-
 <h3 class="">Overall Estimation</h3>
 <div id="parent" class="center">
-    <p id="a0" class="center">哪种类型数据</p>
-    <button id="a1" href="javascript:void(0);">连续型</button>
-    <button id="a2" href="javascript:void(0);">离散型</button>
-    <p>Situation:</span><span id="situation"></p>
+    <p id="a0" class="center">哪种类型数据 What is the Data Type?</p>
+    <button id="a1" href="javascript:void(0);" class="decisionButton">Continuos</button>
+    <button id="a2" href="javascript:void(0);" class="decisionButton">Discrete-binary</button>
+    <!--     <p>Situation:</span><span id="situation"></p>
     <p class="center">需要使用的是：</p>
-    <p id="decision"></p>
+    <p id="decision"></p> -->
 
 
 </div>
