--- a/statistics/03.html
+++ b/statistics/03.html
@@ -8,7 +8,7 @@
 
 
 
-<h2>3 t（log）置信区间（3）</h2>
+<h2>3 t（log）置信区间 t (Log) Confidence Interval</h2>
 <div>
     time Data
     <textarea cols="20" rows="4" name="textareaWald" id="textareaTlog"></textarea>
