--- a/statistics/04.html
+++ b/statistics/04.html
@@ -9,7 +9,7 @@
 </script>
 
 
-<h2>4 中位数置信区间（3）</h2>
+<h2>4 中位数置信区间（3）Confidence Interval around Median </h2>
                 <div>
                     成功人数
                     <textarea cols="40" rows="5" name="textareaWald" id="ConfidenceIntervalAroundMedian1"></textarea>
