--- a/statistics/01.html
+++ b/statistics/01.html
@@ -6,20 +6,20 @@
     $("#div3").load("main_html/head_Math_js.html");
 </script>
 
-<h2>01 Wald</h2>
+<h2>01 Adjusted Wald</h2>
 <div>
-    成功人数
+    成功人数 Success Number
     <textarea cols="10" rows="1" name="textareaWald" id="successNum"></textarea>
 </div>
 
 <div>
-    总人数
+    总人数 Total Number
     <textarea cols="10" rows="1" name="textareaWald" id="totalNum"></textarea>
 </div>
 
 <div>
-    置信区间
-    <textarea cols="10" rows="1" name="textareaWald" id="q01z"></textarea>%
+    置信区间 Confidence Interval
+    <textarea cols="10" rows="1" name="textareaWald" id="q01z"></textarea>% (How precise is your estimates)
 </div>
 
 
@@ -28,5 +28,5 @@
 <div>Padj:<input type="text" id="Padj" /></div>
 <div>95%正态分布临界值:<input type="text" id="z95" /></div>
 <div>根号下那堆:<input type="text" id="radical" /></div>
-<div>区间最小值:<input type="text" id="waldMin" /></div>
-<div>区间最大值:<input type="text" id="waldMax" /></div>
+<div>区间最小值: Min<input type="text" id="waldMin" /></div>
+<div>区间最大值: Max<input type="text" id="waldMax" /></div>
