--- a/statistics/01.html
+++ b/statistics/01.html
@@ -6,7 +6,7 @@
     $("#div3").load("main_html/head_Math_js.html");
 </script>
 
-<h2>01 Adjusted Wald</h2>
+<h2>01 Adjusted Wald Confidence Interval </h2>
 <div>
     成功人数 Success Number
     <textarea cols="10" rows="1" name="textareaWald" id="successNum"></textarea>
