--- a/statistics/02.html
+++ b/statistics/02.html
@@ -7,7 +7,7 @@
     $("#div3").load("main_html/head_Math_js.html");
 </script>
 
-<h2>02 t置信区间</h2>
+<h2>02 t置信区间 t Confidence Interval</h2>
 连续型数据:<textarea cols="20" rows="2" name="textarea" id="textarea"></textarea>
 
 <div>置信区间:<input type="text" id="Q02confi">%</div>
