--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
         </div>
     </nav>
 
-    <button id="feedback">Feedback</button>
+    <button id="feedback">
+        <!-- <p>Give a</p> -->
+        Feedback
+    </button>
     <textarea cols="20" rows="5" name="textarea" id="text-feedback"></textarea>
-    
+
     <canvas id="myCanvas" width=800 height="500"></canvas>
 
 </body>
