--- a/main_html/direct_selector.html
+++ b/main_html/direct_selector.html
@@ -87,28 +87,28 @@
 
     <!-- <div class="col-sm-12 dark"> -->
     <div class="row">
-        <button class="yellow col" id="q01" href="javascript:void(0);">q01 OE</button>
-        <button class="yellow col" id="q02" href="javascript:void(0);">q02 OE</button>
-        <button class="col yellow" id="q03" href="javascript:void(0);">q03 OE</button>
-        <button class="col yellow" id="q04" href="javascript:void(0);">q04 OE</button>
-        <button class="col pink" id="q05" href="javascript:void(0);">q05 BM</button>
-        <button class="col pink" id="q06" href="javascript:void(0);">q06 BM</button>
-        <button class="col pink" id="q07" href="javascript:void(0);">q07 BM</button>
-        <button class="col pink" id="q08" href="javascript:void(0);">q08 BM</button>
-        <button class="col blue" id="q09" href="javascript:void(0);">q09 AB</button>
-        <button class="col blue" id="q10" href="javascript:void(0);">q10 AB</button>
+        <button class="col pink" id="q01" href="javascript:void(0);">q01 OE</button>
+        <button class="col pink" id="q02" href="javascript:void(0);">q02 OE</button>
+        <button class="col pink" id="q03" href="javascript:void(0);">q03 OE</button>
+        <button class="col pink" id="q04" href="javascript:void(0);">q04 OE</button>
+        <button class="col orange" id="q05" href="javascript:void(0);">q05 BM</button>
+        <button class="col orange" id="q06" href="javascript:void(0);">q06 BM</button>
+        <button class="col orange" id="q07" href="javascript:void(0);">q07 BM</button>
+        <button class="col orange" id="q08" href="javascript:void(0);">q08 BM</button>
+        <button class="col yellow" id="q09" href="javascript:void(0);">q09 AB</button>
+        <button class="col yellow" id="q10" href="javascript:void(0);">q10 AB</button>
     </div>
     <div class="row">
-        <button class="col blue" id="q11" href="javascript:void(0);">q11 AB</button>
-        <button class="col blue" id="q12" href="javascript:void(0);">q12 AB</button>
-        <button class="col dark" id="q13" href="javascript:void(0);">q13</button>
-        <button class="col dark" id="q14" href="javascript:void(0);">q14</button>
-        <button class="col dark" id="q15" href="javascript:void(0);">q15</button>
-        <button class="col dark" id="q16" href="javascript:void(0);">q16</button>
-        <button class="col dark" id="q17" href="javascript:void(0);">q17</button>
-        <button class="col dark" id="q18" href="javascript:void(0);">q18</button>
-        <button class="col dark" id="q19" href="javascript:void(0);">q19</button>
-        <button class="col blue" id="q20" href="javascript:void(0);">q20 AB</button>
+        <button class="col yellow" id="q11" href="javascript:void(0);">q11 AB</button>
+        <button class="col yellow" id="q12" href="javascript:void(0);">q12 AB</button>
+        <button class="col blue" id="q13" href="javascript:void(0);">q13</button>
+        <button class="col blue" id="q14" href="javascript:void(0);">q14</button>
+        <button class="col blue" id="q15" href="javascript:void(0);">q15</button>
+        <button class="col blue" id="q16" href="javascript:void(0);">q16</button>
+        <button class="col blue" id="q17" href="javascript:void(0);">q17</button>
+        <button class="col blue" id="q18" href="javascript:void(0);">q18</button>
+        <button class="col blue" id="q19" href="javascript:void(0);">q19</button>
+        <button class="col yellow" id="q20" href="javascript:void(0);">q20 AB</button>
     </div>
 </div>
 <!-- </div> -->
