--- a/main_html/main_functions.html
+++ b/main_html/main_functions.html
@@ -24,22 +24,23 @@
     <div class="row">
         <button id="F02" href="javascript:void(0);" class="func col yellow">
             <h3>A/B comparison</h3>
-            <p></p>
+            <p>Q09-Q12, Q20</p>
         </button>
         <button id="F03" href="javascript:void(0);" class="func col orange">
             <h3>Benchmark evaluation</h3>
-            <p></p>
+            <p>Q05-Q08</p>
         </button>
     </div>
     <div class="row">
         <button id="F04" href="javascript:void(0);" class="func col pink">
             <h3>Overall estimation</h3>
-            <p></p>
+            <p>Q01-Q04</p>
 
         </button>
 
-        <button id="F01" href="javascript:void(0);" class="func col yellow">
+        <button id="F01" href="javascript:void(0);" class="func col blue">
             <h3>Sample Size Calculator</h3>
+            <p>Q13-Q19</p>
             <p>Temporarily unavailable :(</p>
 
         </button>
