--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Statiqx | Statistical Quantitative Analysis Tool</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/loadAjax.js"></script>
+    <script type="text/javascript" src="js/library/jquery.min.js"></script>
+    <script type="text/javascript" src="js/ui/loadAjax.js"></script>
 
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
 
-    <script type="text/javascript" src="js/paper-full.js"></script>
+    <script type="text/javascript" src="js/library/paper-full.js"></script>
     <script type="text/javascript" src="js/initialization.js" canvas="myCanvas"></script>
 </head>
 
