--- a/index.html
+++ b/index.html
@@ -2,6 +2,24 @@
 <html>
 
 <head>
+    <!-- Hotjar Tracking Code for https://www.statiqx.tk -->
+    <script>
+        (function(h, o, t, j, a, r) {
+            h.hj = h.hj || function() {
+                (h.hj.q = h.hj.q || []).push(arguments)
+            };
+            h._hjSettings = {
+                hjid: 2601218,
+                hjsv: 6
+            };
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script');
+            r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    </script>
+
     <meta charset="utf-8">
     <title>Statiqx | Statistical Quantitative Analysis Tool</title>
 
@@ -36,10 +54,12 @@
 
 
 
-        </div><!-- main_content close -->
+        </div>
+        <!-- main_content close -->
 
 
-    </div><!-- container close -->
+    </div>
+    <!-- container close -->
 
 
     <nav id="navbar_bottom" class="navbar navbar-expand-sm bg-dark navbar-light">
