--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
         </div>
     </nav>
 
-    <button id="feedback">
-        <!-- <p>Give a</p> -->
+    <!-- <button id="feedback">
+       
         Feedback
     </button>
     <textarea cols="20" rows="5" name="textarea" id="text-feedback"></textarea>
 
-    <canvas id="myCanvas" width=800 height="500"></canvas>
+    <canvas id="myCanvas" width=800 height="500"></canvas> -->
 
 </body>
 
